--- a/kuji.html
+++ b/kuji.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>円形ルーレットくじ</title>
+    <title>豪華景品ルーレットくじ</title>
     <style>
         body {
             display: flex;
@@ -22,9 +22,9 @@
         #instruction {
             font-size: 1.2rem;
             font-weight: bold;
-            color: #27ae60;
+            color: #333;
             margin-bottom: 20px;
-            height: 24px; /* テキストが消えてもレイアウトがずれないように高さを固定 */
+            height: 24px;
         }
 
         /* ルーレット全体のコンテナ */
@@ -55,13 +55,13 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
+            /* 確率に合わせて角度と色を設定 */
             background: conic-gradient(
-                #e74c3c 0deg 36deg,   
-                #34495e 36deg 108deg, 
-                #2c3e50 108deg 180deg,
-                #34495e 180deg 252deg,
-                #2c3e50 252deg 324deg,
-                #34495e 324deg 360deg
+                #e74c3c 0deg 36deg,     /* 1等(10%): 赤 */
+                #f39c12 36deg 72deg,    /* 2等(10%): オレンジ */
+                #2ecc71 72deg 144deg,   /* 3等(20%): 緑 */
+                #3498db 144deg 216deg,  /* 4等(20%): 青 */
+                #9b59b6 216deg 360deg   /* 参加賞(40%): 紫 */
             );
             box-shadow: 0 10px 25px rgba(0,0,0,0.15);
             transition: transform 3.5s cubic-bezier(0.1, 0.7, 0.1, 1);
@@ -75,13 +75,13 @@
             color: #34495e;
             text-align: center;
             line-height: 1.6;
-            opacity: 0; /* 最初は透明にしておく */
-            transition: opacity 0.5s ease; /* フワッと表示させるアニメーション */
+            opacity: 0;
+            transition: opacity 0.5s ease;
         }
 
-        /* 当たり・ハズレのメイン文字を大きくする用のクラス */
+        /* 当たりメイン文字を大きくする用のクラス */
         .highlight {
-            font-size: 2rem;
+            font-size: 1.8rem;
             display: block;
             margin-bottom: 10px;
         }
@@ -99,9 +99,7 @@
     <div id="result-text"></div>
 
     <script>
-        // ページが読み込まれたら自動的に実行
         window.onload = function() {
-            // ページを開いてから0.5秒後にルーレットを回し始める（少し間を置くことで自然な演出に）
             setTimeout(spinWheel, 500);
         };
 
@@ -110,44 +108,57 @@
             const resultText = document.getElementById('result-text');
             const instruction = document.getElementById('instruction');
 
-            // 1. 確率判定（10%で当たり）
+            // 1. 確率判定 (0.0 〜 0.999...)
             const randomNum = Math.random();
-            const isWin = randomNum < 0.1;
-
             let targetAngle = 0;
+            let resultData = {};
 
-            if (isWin) {
-                // 当たりの場合：5度〜31度の間でランダム停止
-                targetAngle = Math.floor(Math.random() * 27) + 5;
-            } else {
-                // ハズレの場合：40度〜350度の間でランダム停止
-                targetAngle = Math.floor(Math.random() * 311) + 40;
+            // 境界の線ギリギリに止まらないように、各エリアの内側数度をランダムな停止位置に設定
+            if (randomNum < 0.10) {
+                // 1等：お米（10%） -> 0度〜36度のエリア
+                targetAngle = Math.floor(Math.random() * 32) + 2; 
+                resultData = { text: "🎉 1等！お米 🎉", color: "#e74c3c" };
+            } 
+            else if (randomNum < 0.20) {
+                // 2等：ぷっくりシール（10%） -> 36度〜72度のエリア
+                targetAngle = Math.floor(Math.random() * 32) + 38;
+                resultData = { text: "✨ 2等！ぷっくりシール ✨", color: "#f39c12" };
+            } 
+            else if (randomNum < 0.40) {
+                // 3等：日用品（20%） -> 72度〜144度のエリア
+                targetAngle = Math.floor(Math.random() * 68) + 74;
+                resultData = { text: "🎈 3等！日用品 🎈", color: "#2ecc71" };
+            } 
+            else if (randomNum < 0.60) {
+                // 4等：おもちゃ（20%） -> 144度〜216度のエリア
+                targetAngle = Math.floor(Math.random() * 68) + 146;
+                resultData = { text: "🧸 4等！おもちゃ 🧸", color: "#3498db" };
+            } 
+            else {
+                // 参加賞（40%） -> 216度〜360度のエリア
+                targetAngle = Math.floor(Math.random() * 140) + 218;
+                resultData = { text: "👏 参加賞！ 👏", color: "#9b59b6" };
             }
 
             // 2. 回転角度の計算
             const rotationToAdd = 360 - targetAngle;
-            // 最低5回転（1800度）させる
-            const spinAmount = (5 * 360) + rotationToAdd;
+            const spinAmount = (5 * 360) + rotationToAdd; // 最低5回転
 
             // 3. ルーレットを回転させる
             wheel.style.transform = `rotate(${spinAmount}deg)`;
 
             // 4. 回転終了後に結果を表示
             setTimeout(() => {
-                // 「回っています...」の案内を消す
                 instruction.innerHTML = ""; 
                 
-                if (isWin) {
-                    resultText.innerHTML = "<span class='highlight'>🎉 あたり！ 🎉</span>景品プレゼント！<br>スタッフにこの画面をお見せください！";
-                    resultText.style.color = "#e74c3c";
-                } else {
-                    resultText.innerHTML = "<span class='highlight'>😢 ハズレ！残念！</span>でも参加賞がありますので<br>この画面をスタッフにお見せください！";
-                    resultText.style.color = "#34495e";
-                }
+                // 結果に応じてテキストの色と内容を動的に変更
+                resultText.innerHTML = `
+                    <span class='highlight' style='color:${resultData.color}'>${resultData.text}</span>
+                    景品をお渡しします！<br>スタッフにこの画面をお見せください！
+                `;
                 
-                // 結果のテキストをフワッと表示
                 resultText.style.opacity = 1; 
-            }, 3500); // CSSのtransition時間(3.5s)と合わせる
+            }, 3500);
         }
     </script>
 
